--- a/templates/signup.html
+++ b/templates/signup.html
@@ -46,7 +46,7 @@
             resendBtn.disabled = true;
 
             if (countdown) {
-                clearInterval(countdown);  // Countdown सुरू असल्यास Reset करा
+                clearInterval(countdown);  
             }
 
             countdown = setInterval(function () {
